--- a/task2/css/moreInfo.css
+++ b/task2/css/moreInfo.css
@@ -1,6 +1,46 @@
 .moreInfo{
-
+    margin-top: 48px;
+    height: 160px;
+    display:flex;
+    margin-left: 18px;
+    margin-right: 18px;
+    justify-content: space-around;
 }
 .moreInfo__item{
-
+margin:15px;
+}
+.moreInfo__item__l-icon{
+    float:left;
+    height: 160px;
+}
+.moreInfo__item__icon{
+    background-color: rgb(55, 52, 53);
+    box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
+    width: 70px;
+    height: 69px;
+    margin-right: 30px;
+    border-radius: 10px 0px 10px 10px;
+}
+.moreInfo__item__header{
+    font-size:16px;
+    width: 78%;
+    color:#373435;
+    font-family: SourceSansProBold;
+}
+.moreInfo__item__text{
+    font-size:14px;
+    color: #676364;
+    font-family: SourceSansProReg;
+}
+.moreInfo__item__link{
+    font-size:16px;
+    color:#373435;
+    display:flex;
+    margin-top:30px;
+    font-family: SourceSansProBold;
+}
+.moreInfo__item__link__arrow{
+    color:#ed3237;
+    margin-left: 10px;
+    /*font-family: FontAwesome;*/
 }
