--- a/task2/css/footer.css
+++ b/task2/css/footer.css
@@ -1,7 +1,12 @@
 .footer{
-    color: #dedede;
+    color: #ebebeb;
     margin-top:30px;
     font-size: 16px;
     font-family: SourceSansProReg;
+    line-height: 1.5;
     text-align: center;
+}
+.main-footer{
+    margin-top: 70px;
+    height: 7px;
 }
