--- a/task2/css/logo.css
+++ b/task2/css/logo.css
@@ -1,21 +1,18 @@
 .logo{
-    height: 105px;
     display:flex;
     justify-content: center;
 }
 .logo__img{
     width: 260px;
+    border-radius: 5px;
+    box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
     height: 105px;
     position: relative;
-    top:-10px;
-    right:-10px;
-    border-radius: 5px;
+    right: 3px;
     background: #ebebeb url("../images/sitename.png") no-repeat center;
 }
 .logo__shadow{
-    margin-top: -51px;
+    margin-top: -46px;
     height: 105px;
-    background-color: #d3d3d3;
-    border-radius: 5px;
 }
 
