--- a/task2/css/moreInfo.css
+++ b/task2/css/moreInfo.css
@@ -1,20 +1,47 @@
 .moreInfo{
-    margin-top: 48px;
+    margin-top: 40px;
+    margin-bottom:78px;
     height: 160px;
     display:flex;
-    margin-left: 18px;
+    margin-left: 11px;
     margin-right: 18px;
     justify-content: space-around;
 }
 .moreInfo__item{
-margin:15px;
+    margin: 16px 15px 16px 15px;
 }
 .moreInfo__item__l-icon{
     float:left;
+    margin-top: 3px;
     height: 160px;
 }
 .moreInfo__item__icon{
     background-color: rgb(55, 52, 53);
+    box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
+    width: 69px;
+    height: 69px;
+    margin-right: 30px;
+    border-radius: 10px 0px 10px 10px;
+}
+/*нужно это пофиксить !!*/
+.moreInfo__item__icon-1{
+    background:rgb(55, 52, 53) url("../images/icon1.png") no-repeat center;
+    box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
+    width: 69px;
+    height: 69px;
+    margin-right: 30px;
+    border-radius: 10px 0px 10px 10px;
+}
+.moreInfo__item__icon-2{
+    background:rgb(55, 52, 53) url("../images/icon2.png") no-repeat center;
+    box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
+    width: 69px;
+    height: 69px;
+    margin-right: 30px;
+    border-radius: 10px 0px 10px 10px;
+}
+.moreInfo__item__icon-3{
+    background:rgb(55, 52, 53) url("../images/icon3.png") no-repeat center;
     box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
     width: 70px;
     height: 69px;
@@ -23,24 +50,25 @@ margin:15px;
 }
 .moreInfo__item__header{
     font-size:16px;
-    width: 78%;
+    letter-spacing: 1px;
+    width: 90%;
     color:#373435;
     font-family: SourceSansProBold;
 }
 .moreInfo__item__text{
+    margin-top:19px;
     font-size:14px;
     color: #676364;
     font-family: SourceSansProReg;
 }
 .moreInfo__item__link{
     font-size:16px;
+    letter-spacing: 1px;
     color:#373435;
     display:flex;
-    margin-top:30px;
+    margin-top:32px;
     font-family: SourceSansProBold;
 }
 .moreInfo__item__link__arrow{
-    color:#ed3237;
     margin-left: 10px;
-    /*font-family: FontAwesome;*/
 }
