--- a/task2/css/nav-bar.css
+++ b/task2/css/nav-bar.css
@@ -1,10 +1,12 @@
 .nav{
     display:flex;
-    width: 480px;
+    margin-top:42px;
+    width: 490px;
     justify-content: space-between;
 }
 .nav__item{
     color: #909090;
+    padding: 10px 3px 10px 0px;
     font-size: 16px;
     font-family: SourceSansProReg;
     border-top: 1px solid #909090;
