--- a/task2/css/banner.css
+++ b/task2/css/banner.css
@@ -1,10 +1,11 @@
 .banner{
-    margin-top: 40px;
+    margin-top: 39px;
     display:flex;
-    margin-right: 11px;
+    margin-right: 12px;
     justify-content: center;
 }
 .banner__img{
-
-    width: 1180px;
+    max-width: 1180px;
+    width:100%;
+    height: auto;
 }
