--- a/task2/css/moreInfo.css
+++ b/task2/css/moreInfo.css
@@ -1,19 +1,14 @@
 .moreInfo{
-    margin-top: 40px;
-    margin-bottom:78px;
-    height: 160px;
     display:flex;
-    margin-left: 11px;
-    margin-right: 18px;
+    margin: 38px 18px 41px 11px;
     justify-content: space-around;
 }
 .moreInfo__item{
-    margin: 16px 15px 16px 15px;
+    margin: 16px 15px 0px 15px;
 }
 .moreInfo__item__l-icon{
     float:left;
     margin-top: 3px;
-    height: 160px;
 }
 .moreInfo__item__icon{
     background-color: rgb(55, 52, 53);
@@ -29,7 +24,7 @@
     box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
     width: 69px;
     height: 69px;
-    margin-right: 30px;
+    margin-right: 35px;
     border-radius: 10px 0px 10px 10px;
 }
 .moreInfo__item__icon-2{
@@ -37,7 +32,7 @@
     box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
     width: 69px;
     height: 69px;
-    margin-right: 30px;
+    margin-right: 25px;
     border-radius: 10px 0px 10px 10px;
 }
 .moreInfo__item__icon-3{
@@ -48,10 +43,12 @@
     margin-right: 30px;
     border-radius: 10px 0px 10px 10px;
 }
+.moreInfo__item__block{
+    margin-left: 100px;
+}
 .moreInfo__item__header{
     font-size:16px;
     letter-spacing: 1px;
-    width: 90%;
     color:#373435;
     font-family: SourceSansProBold;
 }
