--- a/task2/css/news.css
+++ b/task2/css/news.css
@@ -1,16 +1,17 @@
 .news{
-    margin-top: 28px;
-    height: 451px;
-    width: 880px;
+    margin-top: 30px;
+    margin-bottom: 14px;
+    width:100%;
     display:flex;
     margin-left: 15px;
     margin-right: 15px;
-    justify-content: space-around;
+    justify-content: center;
 }
 .news__item{
     border-radius: 10px 0px 10px 10px;
-    padding-top:37px;
-    padding-bottom:40px;
+    padding-top:30px;
+    max-width: 270px;
+    padding-bottom:30px;
     background-color: #e2e2e2;
     display:flex;
     flex-direction: column;
@@ -36,7 +37,11 @@
     font-family: SourceSansProReg;
 }
 .news__item__photo{
-
+    max-width: 270px;
+    width: 100%;
+}
+.news__item__photo__img{
+    width: 100%;
 }
 .news__item__link{
     margin-left: 28px;
