--- a/task2/css/products.css
+++ b/task2/css/products.css
@@ -1,10 +1,10 @@
 .products{
     display:flex;
     margin-top:15px;
-    width: 410px;
+    max-width: 410px;
+    width: 100%;
     justify-content: center;
     flex-direction: column;
-    margin-buttom:7px;
 
 }
 .products__title{
