--- a/task2/css/footer.css
+++ b/task2/css/footer.css
@@ -1,9 +1,10 @@
 .footer{
     color: #ebebeb;
-    margin-top:30px;
+    margin-top:35px;
     font-size: 16px;
     font-family: SourceSansProReg;
     line-height: 1.5;
+    letter-spacing: 1px;
     text-align: center;
 }
 .main-footer{
