--- a/task2/css/nav-bar.css
+++ b/task2/css/nav-bar.css
@@ -1,12 +1,13 @@
 .nav{
     display:flex;
-    margin-top:42px;
-    width: 489px;
+    margin-top:41px;
+    width: 490px;
     justify-content: space-between;
 }
 .nav__item{
     color: #909090;
-    padding: 10px 3px 10px 2px;
+    letter-spacing: 1px;
+    padding: 10px 0px 10px 0px;
     font-size: 16px;
     font-family: SourceSansProReg;
     border-top: 1px solid #909090;
