--- a/task2/css/news.css
+++ b/task2/css/news.css
@@ -1,17 +1,16 @@
 .news{
-    margin-top: 30px;
-    margin-bottom: 14px;
+    margin-top: 28px;
     width:100%;
     display:flex;
-    margin-left: 15px;
+    margin-left: 13px;
     margin-right: 15px;
     justify-content: center;
 }
 .news__item{
     border-radius: 10px 0px 10px 10px;
-    padding-top:30px;
+    padding-top:36px;
     max-width: 270px;
-    padding-bottom:30px;
+    padding-bottom:28px;
     background-color: #e2e2e2;
     display:flex;
     flex-direction: column;
@@ -20,18 +19,20 @@
     box-shadow: -10px 10px 0px 0px rgba(0, 0, 0, 0.1);
 }
 .news__item__header{
-    margin-left: 25px;
-    margin-right: 31px;
-    margin-bottom: 20px;
+    margin-left: 26px;
+    margin-right: 30px;
+    margin-bottom: 18px;
     letter-spacing: 1px;
     font-size:16px;
     color:#373435;
     font-family: SourceSansProBold;
 }
 .news__item__text{
-    padding-top:25px;
+    word-wrap: break-word;
+    line-height: 1.6;
+    padding-top:21px;
     margin-left: 25px;
-    margin-right: 25px;
+    margin-right: 10px;
     font-size:14px;
     color: #676364;
     font-family: SourceSansProReg;
@@ -44,13 +45,16 @@
     width: 100%;
 }
 .news__item__link{
-    margin-left: 28px;
+    margin-left: 26px;
     font-size:16px;
     color:#373435;
     letter-spacing: 1px;
     display:flex;
-    margin-top:30px;
+    margin-top:18px;
     font-family: SourceSansProBold;
+}
+.news__item__link:hover{
+    color: #ed3237;
 }
 .news__item__link__arrow{
     margin-left: 10px;
