--- a/task2/css/textrow.css
+++ b/task2/css/textrow.css
@@ -1,16 +1,24 @@
 .text-row{
     display:flex;
+    flex-direction: column;
     margin-right: 3px;
-    margin-top:49px;
+    padding-top:49px;
     justify-content: center;
+}
+.text-row-padding-after-line{
+    padding-top:32px;
 }
 .text-row__header{
     letter-spacing: 2px;
+    margin-right: auto;
+    margin-left: auto ;
     font-size:32px;
     color: #373435;
     font-family: SourceSansProBold;
 }
 .text-row__text{
+    margin-right: auto;
+    margin-left: auto ;
     padding-top: 6px;
     letter-spacing: 1px;
     font-size:18px;
