--- a/task2/css/button-line.css
+++ b/task2/css/button-line.css
@@ -1,23 +1,19 @@
 
-.buttonLine{
-    margin-top: 56px;
-    margin-bottom:  53px ;
-    margin-right: 3px;
+.button-line{
+    padding-top: 57px;
+    padding-bottom: 5px;
+    padding-right: 3px;
+}
+.button-line-padding-top-less{
+    padding-top: 37px;
+}
+.button-line__lines{
     height: 37px;
     display:flex;
     justify-content: center;
     background: url("../images/line.png") no-repeat center;
 }
-.buttonLine-lesstop{
-    margin-top: 34px;
-    margin-bottom:  50px ;
-    margin-right: 3px;
-    height: 37px;
-    display:flex;
-    justify-content: center;
-    background: url("../images/line.png") no-repeat center;
-}
-.buttonLine__button{
+.button-line__button{
     border-radius: 5px;
     max-width: 119px ;
     width: 100%;
@@ -30,6 +26,6 @@
     font-size: 16px;
     box-shadow: -3.536px 3.536px 0px 0px rgba(0, 0, 0, 0.12);
 }
-.buttonLine__button:hover{
+.button-line__button:hover{
     background-color: #909090;
 }
