--- a/task2/css/nav-bar.css
+++ b/task2/css/nav-bar.css
@@ -1,11 +1,13 @@
 .nav{
     display:flex;
-    margin-top:41px;
-    width: 490px;
+    margin-right: auto;
+    margin-left: auto ;
+    max-width: 490px;
     justify-content: space-between;
 }
 .nav__item{
     color: #909090;
+    margin-top:41px;
     letter-spacing: 1px;
     padding: 10px 0px 10px 0px;
     font-size: 16px;
