--- a/task2/css/news.css
+++ b/task2/css/news.css
@@ -1,16 +1,14 @@
 .news{
-    margin-top: 28px;
+    padding-top: 28px;
     width:100%;
     display:flex;
-    margin-left: 13px;
-    margin-right: 15px;
     justify-content: center;
 }
 .news__item{
     border-radius: 10px 0px 10px 10px;
     padding-top:36px;
     max-width: 270px;
-    padding-bottom:28px;
+    padding-bottom:26px;
     background-color: #e2e2e2;
     display:flex;
     flex-direction: column;
@@ -18,7 +16,7 @@
     margin:15px;
     box-shadow: -10px 10px 0px 0px rgba(0, 0, 0, 0.1);
 }
-.news__item__header{
+.news__header{
     margin-left: 26px;
     margin-right: 30px;
     margin-bottom: 18px;
@@ -27,7 +25,7 @@
     color:#373435;
     font-family: SourceSansProBold;
 }
-.news__item__text{
+.news__text{
     word-wrap: break-word;
     line-height: 1.6;
     padding-top:21px;
@@ -37,14 +35,11 @@
     color: #676364;
     font-family: SourceSansProReg;
 }
-.news__item__photo{
+.news__photo{
     max-width: 270px;
     width: 100%;
 }
-.news__item__photo__img{
-    width: 100%;
-}
-.news__item__link{
+.news__link{
     margin-left: 26px;
     font-size:16px;
     color:#373435;
@@ -53,10 +48,9 @@
     margin-top:18px;
     font-family: SourceSansProBold;
 }
-.news__item__link:hover{
+.news__link:hover{
     color: #ed3237;
 }
-.news__item__link__arrow{
-    margin-left: 10px;
-    letter-spacing: 1px;
+.news__arrow{
+    margin-left: 8px;
 }
