--- a/task2/css/products.css
+++ b/task2/css/products.css
@@ -1,8 +1,10 @@
 .products{
     display:flex;
-    margin-top:13px;
+    padding-top:13px;
     max-width: 445px;
     width: 100%;
+    margin-right: auto;
+    margin-left: auto ;
     justify-content: center;
     flex-direction: column;
 
@@ -19,11 +21,11 @@
     margin-top: 30px;
 
 }
-.products__items_l-item{
+.products__l-items{
     display:flex;
     justify-content: center;
 }
-.products__items__item{
+.products__item{
     display: inline-block;
     letter-spacing: 1px;
     padding: 9px 15px 9px 15px;
