--- a/task2/css/more-info.css
+++ b/task2/css/more-info.css
@@ -54,5 +54,7 @@
     color: #ed3237;
 }
 .more-info__arrow{
-    padding-left: 8px;
+    padding-top: 5px;
+    padding-left: 6px;
+    max-height: 11px;
 }
