--- a/task2/css/news.css
+++ b/task2/css/news.css
@@ -52,5 +52,7 @@
     color: #ed3237;
 }
 .news__arrow{
-    margin-left: 8px;
+    padding-top: 5px;
+    padding-left: 6px;
+    max-height: 11px;
 }
