--- a/task3/css/banner.css
+++ b/task3/css/banner.css
@@ -2,20 +2,15 @@
     display:flex;
     margin-right: auto;
     margin-left: auto ;
+    max-height: 430px;
+    max-width: 1181px;
     justify-content: center;
 }
 .banner__img{
     margin-top: 40px;
-    margin-right: 13px;
-    max-width: 1180px;
-    width:100%;
-}
-@media screen and (min-width: 768px) and (max-width: 1024px)
-{
-
-}
-
-@media screen and (min-width: 412px) and (max-width: 768px)
-{
-
+    margin-right: 14px;
+    margin-left: 1px;
+    display: block;
+    max-height: 100%;
+    max-width: 100%;
 }
