--- a/task3/css/button-line.css
+++ b/task3/css/button-line.css
@@ -27,7 +27,9 @@
     box-shadow: -3.536px 3.536px 0px 0px rgba(0, 0, 0, 0.12);
 }
 .button-line__button:hover{
-    background-color: #909090;
+    background-color: red;
+    max-height: 39px;
+    max-width: 123px;
 }
 @media screen and (min-width: 768px) and (max-width: 1024px)
 {
