--- a/task2/css/button-line.css
+++ b/task2/css/button-line.css
@@ -27,5 +27,23 @@
     box-shadow: -3.536px 3.536px 0px 0px rgba(0, 0, 0, 0.12);
 }
 .button-line__button:hover{
-    background-color: #909090;
+    background-color: red;
+    max-height: 39px;
+    max-width: 123px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px)
+{
+    .button-line{
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+}
+
+@media screen and (min-width: 412px) and (max-width: 768px)
+{
+    .button-line{
+        padding-right: 10px;
+        padding-left: 10px;
+    }
 }
