--- a/task2/css/more-info.css
+++ b/task2/css/more-info.css
@@ -3,8 +3,10 @@
     padding: 55px 20px 0px 12px;
     justify-content: space-around;
 }
+
 .more-info__item{
     margin: 0px 13px 0px 15px;
+    position: relative;
  }
 /*нужно это пофиксить !!*/
 .more-info__icon{
@@ -26,6 +28,7 @@
 }
 .more-info__block{
     margin-left: 100px;
+    margin-bottom:45px;
 }
 .more-info__header{
     font-size:16px;
@@ -43,18 +46,78 @@
     font-family: SourceSansProReg;
 }
 .more-info__link{
+    position: absolute;
+    bottom: 0;
     font-size:16px;
     letter-spacing: 1px;
     color:#373435;
     display:flex;
-    margin-top:25px;
+   padding-top:25px;
+    margin-left: 100px;
     font-family: SourceSansProBold;
 }
 .more-info__link:hover{
     color: #ed3237;
 }
+.more-info__icon:hover{
+    width: 72px;
+    height: 72px;
+}
 .more-info__arrow{
     padding-top: 5px;
     padding-left: 6px;
     max-height: 11px;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px)
+{
+    .more-info__text{
+        margin-top:15px;
+    }
+    .more-info__header{
+
+    }
+
+}
+
+@media screen and (min-width: 412px) and (max-width: 768px)
+{
+    .more-info{
+        flex-wrap: wrap;
+    }
+    .more-info__link{
+        position: relative;
+        float: right;
+        margin-top:5px;
+    }
+    .more-info__item{
+        margin-bottom: 35px;
+    }
+    .more-info__text{
+        margin-top:5px;
+    }
+    .more-info__block{
+        margin-bottom:0px;
+    }
+}
+
+@media screen and (max-width: 412px)
+{
+    .more-info{
+        flex-wrap: wrap;
+        margin: 0;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+    .more-info__link{
+        margin-top:5px;
+
+    }
+    .more-info__item{
+        margin-bottom: 35px;
+    }
+    .more-info__text{
+        margin-top:5px;
+    }
 }
