--- a/task2/css/nav-bar.css
+++ b/task2/css/nav-bar.css
@@ -1,6 +1,7 @@
 .nav{
     display:flex;
     margin-right: auto;
+    flex-wrap: wrap;
     margin-left: auto ;
     max-width: 490px;
     justify-content: space-between;
@@ -10,6 +11,8 @@
     margin-top:41px;
     letter-spacing: 1px;
     padding: 10px 0px 10px 0px;
+    display:flex;
+    justify-content: center;
     font-size: 16px;
     font-family: SourceSansProReg;
     border-top: 1px solid #909090;
@@ -17,4 +20,29 @@
 }
 .nav__item:hover{
     color: #ed3237;
+}
+@media screen and (max-width: 412px)
+{
+    .nav{
+        flex-direction: column;
+        padding-top: 40px;
+        max-width: 160px;
+    }
+    .nav__item{
+        margin-top:0px;
+        border-top: 0px solid #909090;
+    }
+}
+
+@media screen and (min-width: 412px) and (max-width: 768px)
+{
+    .nav{
+        flex-direction: column;
+        padding-top: 40px;
+        max-width: 260px;
+    }
+    .nav__item{
+        margin-top:0px;
+        border-top: 0px solid #909090;
+    }
 }
