--- a/task3/css/banner.css
+++ b/task3/css/banner.css
@@ -1,15 +1,15 @@
 .banner{
      margin-right: auto;
      margin-left: auto ;
-     padding-right: 16px;
-     max-width: 1181px;
+     padding-right: 13px;
+     width: 980px;
  }
 .banner__img{
-    margin-top: 40px;
-    height: 391px;
-    width: 100%;
+    margin-top: 33px;
+    height: 323px;
     background-image: url("../images/banner-bg.png");
     background-position-x: 70%;
+    background-position-y: 50%;
     /*box-shadow: -8.699px 9.661px 1px 0px rgba(0, 0, 0, 0.1);*/
     border-radius: 10px 0px 10px 10px;
 }
@@ -17,10 +17,13 @@
 @media screen and (min-width: 768px) and (max-width: 1024px)
 {
     .banner{
-        padding-right: 0px;
+        padding-right: 3px;
+        padding-left: 3px;
+        width: 722px;
     }
     .banner__img{
-        border-radius: 0px;
+        border-radius: 10px 0px 10px 10px;
+        box-shadow: -8.699px 0px 1px 0px rgba(0, 0, 0, 0.1);
     }
 }
 
@@ -28,18 +31,21 @@
 {
     .banner{
         padding-right: 0px;
+        width: 370px;
     }
     .banner__img{
-        border-radius: 0px;
+        border-radius: 10px 0px 10px 10px;
+        box-shadow: -8.699px 0px 1px 0px rgba(0, 0, 0, 0.1);
     }
 }
-
 @media screen and (max-width: 412px)
 {
     .banner{
         padding-right: 0px;
+        width: 280px;
     }
     .banner__img{
-        border-radius: 0px;
+        border-radius: 10px 0px 10px 10px;
+        box-shadow: -8.699px 0px 1px 0px rgba(0, 0, 0, 0.1);
     }
 }
