--- a/task3/css/logo.css
+++ b/task3/css/logo.css
@@ -1,15 +1,28 @@
 .logo{
     display:flex;
     justify-content: center;
+
 }
 .logo__img{
-    width: 260px;
+    width: 216px;
     border-radius: 5px;
-    box-shadow: -8.699px 9.661px 0px 0px rgba(0, 0, 0, 0.1);
-    height: 105px;
+    box-shadow: -7px 8px 0px 0px rgba(0, 0, 0, 0.1);
+    height: 87px;
     position: relative;
     right: 3px;
-    margin-top: -46px;
+    margin-top: -38px;
     background: #ebebeb url("../images/sitename.png") no-repeat center;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px)
+{
+
+}
+@media screen and (min-width: 412px) and (max-width: 768px)
+{
+
+}
+@media screen and (max-width: 412px)
+{
+
 }
 
