--- a/task3/css/news.css
+++ b/task3/css/news.css
@@ -1,5 +1,5 @@
 .news{
-    padding-top: 28px;
+    padding-top: 23px;
     width:100%;
     display:flex;
     flex-wrap: wrap;
@@ -7,53 +7,67 @@
 }
 .news__item{
     border-radius: 10px 0px 10px 10px;
-    padding-top:36px;
-    max-width: 270px;
-    padding-bottom:26px;
+    padding-top:30px;
+    max-width: 224px;
+    padding-bottom:22px;
     background-color: #e2e2e2;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-    margin:15px;
+    margin:12px;
     box-shadow: -10px 10px 0px 0px rgba(0, 0, 0, 0.1);
 }
 .news__header{
-    margin-left: 26px;
-    margin-right: 30px;
-    margin-bottom: 18px;
+    margin-left: 21px;
+    margin-right: 25px;
+    margin-bottom: 15px;
     letter-spacing: 1px;
-    font-size:16px;
+    font-size:13px;
     color:#373435;
     font-family: SourceSansProBold;
 }
 .news__text{
     word-wrap: break-word;
-    line-height: 1.6;
-    padding-top:21px;
-    margin-left: 25px;
-    margin-right: 10px;
-    font-size:14px;
+    line-height: 1.4;
+    padding-top:17px;
+    margin-left: 21px;
+    margin-right: 8px;
+    font-size:11px;
     color: #676364;
     font-family: SourceSansProReg;
 }
 .news__photo{
-    max-width: 270px;
+    max-width: 224px;
     width: 100%;
 }
 .news__link{
-    margin-left: 26px;
-    font-size:16px;
+    margin-left: 21px;
+    font-size:13px;
     color:#373435;
     letter-spacing: 1px;
     display:flex;
-    margin-top:18px;
+    margin-top:15px;
     font-family: SourceSansProBold;
 }
 .news__link:hover{
     color: #ed3237;
 }
 .news__arrow{
-    padding-top: 5px;
-    padding-left: 6px;
-    max-height: 11px;
+    padding-top: 4px;
+    padding-left: 5px;
+    max-height: 9px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px)
+{
+    .news__item{
+        margin-left:40px;
+    }
+}
+
+@media screen and (min-width: 412px) and (max-width: 768px)
+{
+.news__item{
+    margin-left:40px;
+}
 }
