added data to db

--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
@@ -1,4 +1,5 @@
 .App {
+
   text-align: center;
 }
 
@@ -13,11 +14,19 @@
   padding: 20px;
   color: white;
 }
-
+a {
+  text-decoration: none; /* Отменяем подчеркивание у ссылки */
+  color: white;
+}
 .App-title {
   font-size: 1.5em;
 }
-
+.App-films{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 .App-intro {
   font-size: large;
 }
