--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
@@ -1,5 +1,4 @@
 .App {
-
   text-align: center;
 }
 
@@ -9,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: darkgray;
   height: 80px;
   padding: 20px;
   color: white;
