--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
@@ -26,6 +26,15 @@ a {
   justify-content: center;
   flex-wrap: wrap;
 }
+.card{
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .App-intro {
   font-size: large;
 }
