--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/src/App.css
@@ -26,6 +26,12 @@ a {
   justify-content: center;
   flex-wrap: wrap;
 }
+.App-genres{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 .card{
   display: flex;
   margin-top: 10px;
